--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 </div>   
     <main> 
     <div class="wrapperMain">
-        <img src="assets\title.png" alt="Welcome">
+        <img src="https://github.com/WobblyGTwice/FirePumpTraining/blob/main/training1.png" alt="Welcome">
         <h2>SCHEDULE YOUR EVT F3 - F7 PREPERATION CLASS AND/OR WATEROUS PUMP MECHANICS CLASS</h2>
         <p>
           Classes will help prepare technicians for taking the EVT F3 and F7 Fire Apparatus Technician
