--- a/about.html
+++ b/about.html
@@ -32,7 +32,7 @@
 
     <div class="aboutWrapper">
       <div class= "classImg">
-      <img src="assets\class.png" alt="Class">
+      <img src="class.png" alt="Class">
     </div>
     <p>
     Fire Apparatus are complex pieces of equipment from the front bumper to the tailboard. They
