--- a/about.html
+++ b/about.html
@@ -34,6 +34,7 @@
       <div class= "classImg">
       <img src="class.png" alt="Class">
     </div>
+    <div class=aboutBodyText>  
     <p>
     Fire Apparatus are complex pieces of equipment from the front bumper to the tailboard. They
     incorporate many individual systems working in unison to provide a safe, reliable tool for attacting fire. 
@@ -57,6 +58,7 @@
       foam systems work, detrimental aspects, operation, maintenance, overhaul and testing provides a 
       overall working understanding. 
     </p>
+    </div>   
 </div>
 </div>
 </main>
