--- a/about.html
+++ b/about.html
@@ -32,9 +32,8 @@
 
     <div class="aboutWrapper">
       <div class= "classImg">
-      <img src="class.png" alt="Class">
+      <img src="assets\class.png" alt="Class">
     </div>
-    <div class=aboutBodyText>  
     <p>
     Fire Apparatus are complex pieces of equipment from the front bumper to the tailboard. They
     incorporate many individual systems working in unison to provide a safe, reliable tool for attacting fire. 
@@ -58,10 +57,10 @@
       foam systems work, detrimental aspects, operation, maintenance, overhaul and testing provides a 
       overall working understanding. 
     </p>
-    </div>   
 </div>
-</div>
+
 </main>
+</div>
   </body>
   <script src="index.js"></script>
 </html>
