--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
 
       </nav>
     </header>
-</div>   
+   
     <main> 
     <div class="wrapperMain">
-        <img src="title.png" alt="Welcome">
+        <img src="assets\title.png" alt="Welcome">
         <h2>SCHEDULE YOUR EVT F3 - F7 PREPERATION CLASS AND/OR WATEROUS PUMP MECHANICS CLASS</h2>
         <p>
           Classes will help prepare technicians for taking the EVT F3 and F7 Fire Apparatus Technician
@@ -88,7 +88,7 @@
 
 
    </main>
-
+  </div>
 	<script src="index.js"></script>
 </div>
   </body>
