--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <div class="headerText">
         <h1>Fire Pump Training LLC</h1>
       </div>
-
+      <div class="navLinks">
       <nav class="links">
         <ul> 
             <li><a href="index.html">Home</a></li>
@@ -24,12 +24,15 @@
         </ul>
 
       </nav>
+    </div>
     </header>
-</div>   
+   
     <main> 
     <div class="wrapperMain">
-        <img src="title.png" alt="Welcome">
+        <img src="assets\title.png" alt="Welcome">
+        <div class = "mainText">
         <h2>SCHEDULE YOUR EVT F3 - F7 PREPERATION CLASS AND/OR WATEROUS PUMP MECHANICS CLASS</h2>
+        <br>
         <p>
           Classes will help prepare technicians for taking the EVT F3 and F7 Fire Apparatus Technician
           Exams. Training will focus on fire pump/foam systems components, function, operation, 
@@ -37,24 +40,28 @@
           standards are incorporated into the class. Repair portion will focus on the waterous CM/CS 
           pumps, Y/C20 transfer cases, Foam and CAFS. 
         </p>
+        <br>
         <p>
           Class days will be approximately 8 hours per day with one hour lunch and fifteen-minute
           breaks.
         </p>
+        <br>
         <p>    
           Students will need to supply their own copies of listed reference materials from F3 and F7 EVT
           Preparation Objectives (evtcc.org). Supplied training materials will be paper copies of the 
           classroom presentations and flash drive containing pdfs of presentations and 
           miscellaneous Waterous training videos and animations.  
         </p>
-
+        <br>
         <p><b>
             Though this class will prepare students for the EVT Examinations it is imperative that the 
             students familiarize themselves with the EVT Objectives and listed reference material
             prior to taking exams. 
         </b></p>
-
-        <h2> Class Options</h2>
+      </div>
+      <br>
+      <br>
+      
         
         <table>
             <caption>
@@ -88,7 +95,7 @@
 
 
    </main>
-
+  </div>
 	<script src="index.js"></script>
 </div>
   </body>
